--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,20 @@
 buildscript {
     ext {
-        compose_ui_version = '1.2.0'
+        compose_version = '1.5.4'
+        core_version = '1.12.0'
+        lifecycle_version = '2.6.2'
+        activity_version = '1.8.1'
+        material_version = '1.2.0-alpha11'
+        hilt_version = '2.48'
+        hilt_compose_version = '1.1.0'
+        navigation_version = '2.7.5'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
+
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
+    id 'com.google.dagger.hilt.android' version '2.48' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
 }
